--- a/handlebars/login.handlebars
+++ b/handlebars/login.handlebars
@@ -1,56 +1,151 @@
-<div class="columns">
-  <div class="column is-half">
-    <h2 class="title is-2">Login</h2>
+<!DOCTYPE html>
+<html lang="en">
 
-    <form class="login-form">
-      <div class="field">
-        <label for="email-login" class="label">Email:</label>
-        <div class="control">
-          <input class="input" type="text" id="email-login" />
-        </div>
-      </div>
-      <div class="field">
-        <label for="password-login" class="label">Password:</label>
-        <div class="control">
-          <input class="input" type="password" id="password-login" />
-        </div>
-      </div>
-      <div class="field">
-        <div class="control">
-          <button class="button is-primary" type="submit">Login</button>
-        </div>
-      </div>
-    </form>
-  </div>
-  <div class="column is-half">
-    <h2 class="title is-2">Signup</h2>
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>{{pageTitle}}</title>
+    <link rel="stylesheet" href="https://unpkg.com/bulma@0.9.4/css/bulma.min.css" />
+    <link rel="stylesheet" type="text/css" href="{{customStyles}}">
+</head>
 
-    <form class="signup-form">
-      <div class="field">
-        <label for="name-signup" class="label">Name:</label>
-        <div class="control">
-          <input class="input" type="text" id="name-signup" />
-        </div>
-      </div>
-      <div class="field">
-        <label for="email-signup" class="label">Email:</label>
-        <div class="control">
-          <input class="input" type="text" id="email-signup" />
-        </div>
-      </div>
-      <div class="field">
-        <label for="password-signup" class="label">Password:</label>
-        <div class="control">
-          <input class="input" type="password" id="password-signup" />
-        </div>
-      </div>
-      <div class="field">
-        <div class="control">
-          <button class="button is-primary" type="submit">Signup</button>
-        </div>
-      </div>
-    </form>
-  </div>
-</div>
+<body>
+    <div class="container">
+        <div class="columns is-justify-content-center">
+            <div class="column is-6-tablet is-5-desktop is-4-widescreen is-3-fullh">
 
-<script src="./js/login.js"></script>
+                {{#if showLoginForm}}
+                <!-- Login Form -->
+                <form>
+                    <h3 class="title has-text-black">Login</h3>
+                    <hr class="login-hr">
+                    <p class="subtitle has-text-black">Please login to proceed.</p>
+                    <div class="box">
+                        <!-- Login form content... -->
+                        <figure class="avatar">
+                            <img src="https://via.placeholder.com/150">
+                        </figure>
+                        <form>
+                            <div class="field">
+                                <div class="control">
+                                    <input class="input is-large" type="email" placeholder="Your Email" autofocus="">
+                                </div>
+                            </div>
+
+                            <div class="field">
+                                <div class="control">
+                                    <input class="input is-large" type="password" placeholder="Your Password">
+                                </div>
+                            </div>
+                            <div class="field">
+                                <label class="checkbox">
+                                    <input type="checkbox">
+                                    Remember me
+                                </label>
+                            </div>
+                            <button id="loginButton" class="button is-block is-info is-large is-fullwidth">
+                                Login <i class="fa fa-sign-in" aria-hidden="true"></i>
+                            </button>
+                            <button onclick="showSignupForm()" class="button is-block is-info is-large is-fullwidth">
+                                Sign Up
+                            </button>
+                        </form>
+                    </div>
+                    <p class="has-text-grey">
+                        <a href="../">Forgot Password</a> &nbsp;·&nbsp;
+                        <a href="../">Need Help?</a>
+                    </p>
+                </form>
+                {{/if}}
+
+                {{#if showSignupForm}}
+                <!-- Signup Form -->
+                <form method="POST" action="{{formAction}}" class="box p-5">
+                    <h3 class="title has-text-black">Sign Up</h3>
+                    <hr class="login-hr">
+                    <p class="subtitle has-text-black">Please sign up to create an account.</p>
+                    <div class="field">
+                        <label class="is-block mb-4">
+                            <span class="is-block mb-2">Email address</span>
+                            <input
+                                required
+                                type="email"
+                                class="input"
+                                placeholder="joe.bloggs@example.com"
+                            />
+                        </label>
+
+                        <label class="is-block mb-4">
+                            <span class="is-block mb-2">Password</span>
+                            <input
+                                name="password"
+                                type="password"
+                                class="input"
+                                minlength="6"
+                                placeholder="(must be 6+ chars)"
+                                required
+                            />
+                        </label>
+
+                        <div class="mb-4">
+                            <label>
+                                <input type="checkbox" name="tos" value="yes" required />
+                                <span>I agree with the Terms</span>
+                            </label>
+                        </div>
+
+                        <div class="mb-4">
+                            <button type="submit" class="button {{buttonStyle}}">submit</button>
+                        </div>
+
+                        <div>
+                            <div class="is-size-7 has-text-right">
+                                {{linkText}}<a href="{{linkHref}}" class="has-text-dark">{{linkAnchorText}}</a>
+                            </div>
+                        </div>
+                    </div>
+                </form>
+                {{/if}}
+
+            </div>
+        </div>
+    </div>
+
+    <script async type="text/javascript" src="../js/bulma.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/handlebars@4.7.7/dist/handlebars.min.js"></script>
+    <script>
+        function showSignupForm() {
+            const template = `
+                {{#if showLoginForm}}
+                    ... (Login form content)
+                {{/if}}
+                {{#if showSignupForm}}
+                    ... (Signup form content)
+                {{/if}}
+            `;
+
+            const data = {
+                pageTitle: 'Your Page Title',
+                customStyles: 'Your Custom Styles',
+                showLoginForm: false,
+                showSignupForm: true,
+                formAction: 'Your Form Action URL',
+                buttonStyle: 'Your Button Style',
+                buttonText: 'Your Button Text',
+                linkText: 'Your Link Text',
+                linkHref: 'Your Link Href',
+                linkAnchorText: 'Your Link Anchor Text',
+            };
+
+            const compiledTemplate = Handlebars.compile(template);
+            const renderedHtml = compiledTemplate(data);
+
+           
+            document.body.innerHTML = renderedHtml;
+        }
+    </script>
+</body>
+
+</html>
+
