--- a/handlebars/cover.handlebars
+++ b/handlebars/cover.handlebars
@@ -31,7 +31,7 @@
                 <div class="container">
                     <div class="navbar-brand">
                         <a class="navbar-item" href="../">
-                            <img src="../images/bulma.png" alt="Logo"> logo
+                            <img src="../images/bulma.png" alt="Logo"> 
                         </a>
                         <span class="navbar-burger burger" data-target="navbarMenu">
                             <span></span>
