--- a/handlebars/cover.handlebars
+++ b/handlebars/cover.handlebars
@@ -39,7 +39,7 @@
                             <span></span>
                         </span>
                     </div>
-                    <div id="navbarMenu" class="navbar-menu">
+                    <div id="navbarMenu" class="navbarmenu">
                         <div class="navbar-end">
                             <div class="tabs is-right">
                                 <ul>
