--- a/handlebars/cover.handlebars
+++ b/handlebars/cover.handlebars
@@ -65,7 +65,7 @@
                     </div>
                     <div class="column is-6 is-offset-1">
                         <h1 class="title is-2">
-                            Food Truck hub
+                           {{mainTitle}}
                         </h1>
                         <h2 class="subtitle is-4">
                             Let this cover page describe a product or service.
