Consolidated pages. Interactivity in the works.

--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -13,7 +13,7 @@
                 id="name-signup"
                 class="input"
                 minlength="6"
-                placeholder="(must be 6+ chars)"
+                placeholder="Joe Bloggs"
             />
         </label>
 
@@ -41,12 +41,12 @@
             />
         </label>
 
-        <div class="mb-4">
+        {{!-- <div class="mb-4">
             <label>
                 <input type="checkbox" name="tos" value="yes" required />
                 <span>I agree with the Terms</span>
             </label>
-        </div>
+        </div> --}}
 
         <div class="mb-4">
             <button type="submit" class="button {{buttonStyle}}">submit</button>
