--- a/views/cover.handlebars
+++ b/views/cover.handlebars
@@ -68,21 +68,21 @@
                             Food Truck hub
                         </h1>
                         
-                        {{#each foodtrucks as |foodtruck| }}
-                        <div class="row mb-4 project">
-  <div class="col-md-5">
-    <h2>
-      <a href="/foodtruck/{{foodtruck.id}}">{{foodtruck.name}}</a>
-    </h2>
-    <p>Created by {{foodtruck.user.name}}</p>
-  </div>
-  <div class="col-md-7">
-    <p>
-      {{foodtruck.description}}
-    </p>
-  </div>
-</div>
-{{/each}}
+                      {{#each foodtrucks as |foodtruck|}}
+                        <div class="row mb-4" >
+                            <div class="col-md-12">
+                                <div class="card">
+                                    <div class="card-body">
+                                        <h2 class="card-title">
+                                            <a href="/foodtruck/{{foodtruck.id}}">{{foodtruck.name}}</a>
+                                        </h2>
+                                        <p class="card-text">Created by {{foodtruck.user.name}}</p>
+                                        <p class="card-text">{{foodtruck.description}}</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        {{/each}}
                         <br>
                         <p class="has-text-centered">
                             <a class="button is-medium is-info is-outlined">
