Added Menu functionality.

--- a/views/cover.handlebars
+++ b/views/cover.handlebars
@@ -74,7 +74,7 @@
                                 <div class="card">
                                     <div class="card-body">
                                         <h2 class="card-title">
-                                            <a href="/foodtruck/{{foodtruck.id}}">{{foodtruck.name}}</a>
+                                            <a href="/menu/{{foodtruck.id}}">{{foodtruck.name}}</a>
                                         </h2>
                                         <p class="card-text">Created by {{foodtruck.user.name}}</p>
                                         <p class="card-text">{{foodtruck.description}}</p>
