--- a/views/menu.handlebars
+++ b/views/menu.handlebars
@@ -2,8 +2,9 @@
 <section id="menu" class="section">
     <div class="container">
         <h2 class="title has-text-centered">Our Menu</h2>
+        
         <!-- Your menu items can go here -->
-        <div class="columns">
+        {{!-- <div class="columns">
             <div class="column">
                 <div class="card">
                     <div class="card-content">
@@ -26,6 +27,6 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> --}}
     </div>
 </section>
