Menu page handlebar

--- a/views/cover.handlebars
+++ b/views/cover.handlebars
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <!-- Bulma Version 0.9.x -->
     <link rel="stylesheet" href="https://unpkg.com/bulma@0.9.4/css/bulma.min.css" />
+    
     <style type="text/css">
         html,
         body {
@@ -43,9 +44,14 @@
                         <div class="navbar-end">
                             <div class="tabs is-right">
                                 <ul>
-                                    <li class="is-active"><a>Home</a></li>
-                                    <li><a href="login.handlebars">Login</a></li>
-                                    <li><a href="homepage.handlebars">Explore</a></li>
+                    
+                                    <li><a href="/login">Login</a></li>
+                                     <li><a href="/signup">signup</a></li>
+                                    <li><a href="/main">Explore</a></li>
+                                    <li><a href="/menu">Menu</a></li>
+                                 <li><a href="/foodtruck">Add your truck</a></li>
+
+                                   
                                    
                                     
                                 </ul>
