--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,4 +1,4 @@
-{{!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -8,15 +8,13 @@
     <title>{{pageTitle}}</title>
     <link rel="stylesheet" href="https://unpkg.com/bulma@0.9.4/css/bulma.min.css" />
     <link rel="stylesheet" type="text/css" href="{{customStyles}}">
-</head> --}}
+</head>
 
 <body>
     <div class="container">
         <div class="columns is-justify-content-center">
             <div class="column is-6-tablet is-5-desktop is-4-widescreen is-3-fullh">
-
-                {{!-- {{#if showLoginForm}} --}}
-                <!-- Login Form -->
+              <!-- Login Form -->
                 <form class="login-form">
                     <h3 class="title has-text-black">Login</h3>
                     <hr class="login-hr">
@@ -57,97 +55,9 @@
                         <a href="../">Need Help?</a>
                     </p>
                 </form>
-                {{!-- {{/if}} --}}
-
-                {{!-- {{#if showSignupForm}}
-                <!-- Signup Form -->
-                <form method="POST" action="{{formAction}}" class="box p-5">
-                    <h3 class="title has-text-black">Sign Up</h3>
-                    <hr class="login-hr">
-                    <p class="subtitle has-text-black">Please sign up to create an account.</p>
-                    <div class="field">
-                        <label class="is-block mb-4">
-                            <span class="is-block mb-2">Email address</span>
-                            <input
-                                required
-                                type="email"
-                                class="input"
-                                placeholder="joe.bloggs@example.com"
-                            />
-                        </label>
-
-                        <label class="is-block mb-4">
-                            <span class="is-block mb-2">Password</span>
-                            <input
-                                name="password"
-                                type="password"
-                                class="input"
-                                minlength="6"
-                                placeholder="(must be 6+ chars)"
-                                required
-                            />
-                        </label>
-
-                        <div class="mb-4">
-                            <label>
-                                <input type="checkbox" name="tos" value="yes" required />
-                                <span>I agree with the Terms</span>
-                            </label>
-                        </div>
-
-                        <div class="mb-4">
-                            <button type="submit" class="button {{buttonStyle}}">submit</button>
-                        </div>
-
-                        <div>
-                            <div class="is-size-7 has-text-right">
-                                {{linkText}}<a href="{{linkHref}}" class="has-text-dark">{{linkAnchorText}}</a>
-                            </div>
-                        </div>
-                    </div>
-                </form>
-                {{/if}}
-
             </div>
         </div>
     </div>
-
-    <script async type="text/javascript" src="../public/js/login.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/handlebars@4.7.7/dist/handlebars.min.js"></script>
-    <script>
-        function showSignupForm() {
-            const template = `
-                {{#if showLoginForm}}
-                    ... (Login form content)
-                {{/if}}
-                {{#if showSignupForm}}
-                    ... (Signup form content)
-                {{/if}}
-            `;
-
-            const data = {
-                pageTitle: 'Your Page Title',
-                customStyles: 'Your Custom Styles',
-                showLoginForm: false,
-                showSignupForm: true,
-                formAction: 'Your Form Action URL',
-                buttonStyle: 'Your Button Style',
-                buttonText: 'Your Button Text',
-                linkText: 'Your Link Text',
-                linkHref: 'Your Link Href',
-                linkAnchorText: 'Your Link Anchor Text',
-            };
-
-            const compiledTemplate = Handlebars.compile(template);
-            const renderedHtml = compiledTemplate(data);
-
-           
-            document.body.innerHTML = renderedHtml;
-        }
-    </script>
 </body>
 
 </html>
-
-
-<h1>Well Hello There!</h1> --}}
