Added foodtruck images to main page.

--- a/views/menu.handlebars
+++ b/views/menu.handlebars
@@ -74,7 +74,7 @@
         <div class="card">
           <div class="card-image">
             <figure class="image is-16by9">
-              <img src="foodtruck.jpeg" alt="Image">
+              <img src="/images/{{foodtruck.image}}" alt="{{foodtruck.name}}">
             </figure>
           </div>
           <div class="card-content">
