added styling for handlebars

--- a/views/cover.handlebars
+++ b/views/cover.handlebars
@@ -11,12 +11,13 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <!-- Bulma Version 0.9.x -->
     <link rel="stylesheet" href="https://unpkg.com/bulma@0.9.4/css/bulma.min.css" />
+    <link rel="stylesheet" href="./views/css/cover.css">
     
     <style type="text/css">
         html,
         body {
             font-family: 'Open Sans';
-        }
+        }b
 
         img {
             padding: 5px;
