--- a/views/cover.handlebars
+++ b/views/cover.handlebars
@@ -80,7 +80,7 @@
                                 <div class="card">
                                     <div class="card-body">
                                         <h2 class="card-title">
-                                            <img class="foodtruck-card" src="/images/{{foodtruck.image}}" alt="{{foodtruck.name}}">
+                                            <img class="foodtruck-card" src="/images/foodtruck-image-{{foodtruck.id}}.png" alt="{{foodtruck.name}}">
                                             <a href="/foodtruck/{{foodtruck.id}}/menu">{{foodtruck.name}}</a>
                                         </h2>
                                         <p class="card-text">Created by {{foodtruck.user.name}}</p>
