--- a/views/foodtruck.handlebars
+++ b/views/foodtruck.handlebars
@@ -34,7 +34,7 @@
     {{#each foodtrucks as |foodtruck|}}
     <div class="row mb-2">
       <div class="col-md-8">
-        <h4><a href="/foodtruck/{{foodtruck.id}}">{{foodtruck.name}}</a></h4>
+        <h4><a href="/foodtruck/{{foodtruck.id}}/profile">{{foodtruck.name}}</a></h4>
       </div>
       <div class="col-md-4">
         <button class="btn btn-sm btn-danger" data-id="{{foodtruck.id}}">DELETE</button>
